<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<View
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey" />

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="65dp"
    android:layout_marginBottom="41dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:id="@+id/roundedCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="6dp">
            <ImageView
                android:contentDescription="@string/rounded_image"
                android:id="@+id/roundedImageView"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:src="@mipmap/ic_launcher"
                android:background="@color/white"
                android:scaleType="centerCrop"
                />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/app_name"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginBottom="14dp"
            android:textSize="30sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/numberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingRight="45dp"
        android:paddingLeft="45dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:contentDescription="@string/btn_decline"
                android:id="@+id/btnDecline"
                android:layout_marginBottom="13dp"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:background="@drawable/layout_bg_decline"
                android:src="@drawable/decline_call_iconx5"/>
            <TextView
                android:id="@+id/declineText"
                android:text="@string/btn_decline_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:contentDescription="@string/btn_answer"
                android:id="@+id/btnAnswer"
                android:layout_marginBottom="13dp"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:background="@drawable/layout_bg_accept"
                android:src="@drawable/accept_call_iconx5"/>
            <TextView
                android:id="@+id/acceptText"
                android:text="@string/btn_answer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>

</FrameLayout>
</merge>